Move config validation to separate classes