@@ -4,6 +4,7 @@ import com.google.common.base.Objects;
 import com.google.common.base.Stopwatch;
 import jakarta.persistence.EntityExistsException;
 import joptsimple.internal.Strings;
+import org.nzbhydra.config.BaseConfigHandler;
 import org.nzbhydra.config.ConfigChangedEvent;
 import org.nzbhydra.config.ConfigProvider;
 import org.nzbhydra.config.indexer.IndexerConfig;
@@ -37,7 +38,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.slf4j.Marker;
 import org.springframework.aot.hint.annotation.Reflective;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.context.event.EventListener;
 import org.springframework.stereotype.Component;
@@ -83,39 +83,40 @@ public abstract class Indexer<T> {
     protected IndexerConfig config;
     private Pattern cleanupPattern;
 
-    @Autowired
+
     protected ConfigProvider configProvider;
-    @Autowired
+
     protected IndexerRepository indexerRepository;
-    @Autowired
+
     protected SearchResultRepository searchResultRepository;
-    @Autowired
+
     protected IndexerApiAccessRepository indexerApiAccessRepository;
-    @Autowired
+
     protected IndexerApiAccessEntityShortRepository indexerApiAccessShortRepository;
-    @Autowired
+
     private IndexerLimitRepository indexerStatusRepository;
-    @Autowired
+
     protected IndexerWebAccess indexerWebAccess;
-    @Autowired
+
     protected SearchResultAcceptor resultAcceptor;
-    @Autowired
+
     protected CategoryProvider categoryProvider;
-    @Autowired
+
     protected InfoProvider infoProvider;
-    @Autowired
+
     private ApplicationEventPublisher eventPublisher;
-    @Autowired
+
     private QueryGenerator queryGenerator;
-    @Autowired
+
     private CustomQueryAndTitleMapping titleMapping;
 
+    private BaseConfigHandler baseConfigHandler;
 
 
     protected Indexer() {
     }
 
-    public Indexer(ConfigProvider configProvider, IndexerRepository indexerRepository, SearchResultRepository searchResultRepository, IndexerApiAccessRepository indexerApiAccessRepository, IndexerApiAccessEntityShortRepository indexerApiAccessShortRepository, IndexerLimitRepository indexerStatusRepository, IndexerWebAccess indexerWebAccess, SearchResultAcceptor resultAcceptor, CategoryProvider categoryProvider, InfoProvider infoProvider, ApplicationEventPublisher eventPublisher, QueryGenerator queryGenerator, CustomQueryAndTitleMapping titleMapping) {
+    public Indexer(ConfigProvider configProvider, IndexerRepository indexerRepository, SearchResultRepository searchResultRepository, IndexerApiAccessRepository indexerApiAccessRepository, IndexerApiAccessEntityShortRepository indexerApiAccessShortRepository, IndexerLimitRepository indexerStatusRepository, IndexerWebAccess indexerWebAccess, SearchResultAcceptor resultAcceptor, CategoryProvider categoryProvider, InfoProvider infoProvider, ApplicationEventPublisher eventPublisher, QueryGenerator queryGenerator, CustomQueryAndTitleMapping titleMapping, BaseConfigHandler baseConfigHandler) {
         this.configProvider = configProvider;
         this.indexerRepository = indexerRepository;
         this.searchResultRepository = searchResultRepository;
@@ -129,6 +130,7 @@ public abstract class Indexer<T> {
         this.eventPublisher = eventPublisher;
         this.queryGenerator = queryGenerator;
         this.titleMapping = titleMapping;
+        this.baseConfigHandler = baseConfigHandler;
     }
 
     public void initialize(IndexerConfig config, IndexerEntity indexer) {
@@ -324,7 +326,7 @@ public abstract class Indexer<T> {
         getConfig().setDisabledUntil(null);
         getConfig().setDisabledLevel(0);
         getConfig().setDisabledAt(null);
-        configProvider.getBaseConfig().save(false);
+        baseConfigHandler.save(false);
         saveApiAccess(accessType, responseTime, IndexerAccessResult.SUCCESSFUL, true);
     }
 
@@ -342,7 +344,7 @@ public abstract class Indexer<T> {
         }
         getConfig().setLastError(reason);
         getConfig().setDisabledAt(Instant.now());
-        configProvider.getBaseConfig().save(false);
+        baseConfigHandler.save(false);
         eventPublisher.publishEvent(new IndexerDisabledNotificationEvent(indexer.getName(), getConfig().getState(), reason));
 
         saveApiAccess(accessType, responseTime, accessResult, false);
@@ -440,7 +442,7 @@ public abstract class Indexer<T> {
         }
         title = title.trim().replace("&", "");
 
-        List<String> removeTrailing = configProvider.getBaseConfig().getSearching().getRemoveTrailing().stream().map(x -> x.toLowerCase().trim()).collect(Collectors.toList());
+        List<String> removeTrailing = configProvider.getBaseConfig().getSearching().getRemoveTrailing().stream().map(x -> x.toLowerCase().trim()).toList();
         if (removeTrailing.isEmpty()) {
             return title;
         }
